--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The basic Node.js application on TypeScript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jshint ./src/server.ts",
     "start": "ts-node src/server.ts",
     "build": "tsc -p tsconfig.json",
     "dev": "nodemon ",
