--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "ts-node src/server.ts",
     "build": "tsc -p tsconfig.json",
     "dev": "nodemon ",
-    "pop": "ts-node bin/populate.ts"
+    "pop": "ts-node bin/populate.ts",
+    "test:coverage": "jest --coverage",
+    "test:coverall" : "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "author": "",
   "license": "ISC",
@@ -39,7 +41,10 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.2",
     "@types/levelup": "^3.1.1",
-    "@types/node": "^12.12.11"
+    "@types/node": "^12.12.11",
+    "coveralls": "^3.0.9",
+    "jest": "^24.9.0",
+    "mocha-lcov-reporter": "^1.3.0"
   },
   "repository": {
     "type": "git",
