--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 node_js:
-    - "node"
-script:
-    - npm run test:coverall
+  - '13.3.0'
+install: 
+  - npm install
+script: 
+  - npm run test
